<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".QuestionAnswerActivity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10.0"
        android:textSize="24sp"
        android:textColor = "@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="10.0"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score: 0"
        android:textSize="24sp"
        android:textColor = "@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <TextView
        android:id="@+id/questionAnswerUserGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Level: 1"
        android:textSize="24sp"
        android:textColor = "@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/titleBackground"
        android:gravity="center"
        android:minHeight="130dp"
        android:text="What is the meaning of the transporter in the show?"
        android:textColor="@color/titleTextBackground"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionAnswerUserGreeting"
        tools:text="Question" />

    <GridLayout
        android:id="@+id/answer_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/lifeline_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question">

        <Button
            android:id="@+id/answer1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:allowUndo="false"
            android:backgroundTint="@color/buttonBackground"
            android:text="Answer 1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Answer 2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Answer 3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Answer 4"
            android:textSize="16sp" />

    </GridLayout>

    <GridLayout
        android:id="@+id/lifeline_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/lifeline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Remove 1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/lifeline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Skip Question"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/lifeline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Restore Timer"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/lifeline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="50/50"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/lifeline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="2nd Chance"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/lifeline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="Pick 2"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>