...
        android:id="@+id/ModeSelectHomeButton"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/buttonBackground"
        android:contentDescription="@string/returnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/modeSelectOk"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/ModeToInfoReturn"
        app:layout_constraintTop_toBottomOf="@+id/mode100"
        app:layout_constraintVertical_bias="0.698"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
...
        android:id="@+id/mode20"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/normal"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/mode30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mode30"
        android:layout_width="300dp"
...
